# FBDA-Project2

./: .gitignore  README.md  auto_collect_all.py  collector.py  create_benchmark.py
dependence/: environment.yml  pyproject.toml  requirements.txt
frequency model/: README.md  cross_market_comparison.py  data_loader.py  frequency_comparison.py  modeling.py  portfolio.py  preprocess_stock_data.py  run_crypto_analysis.py  run_stock_analysis.py  stock_analysis.py  stock_data_loader.py  tarv.py  time_series_anomaly.py  visualize_time_series.py
src/: __init__.py
src/api/: __init__.py  binance_client.py  upbit_client.py
src/core/: __init__.py  collectors.py
src/data/: __init__.py  processor.py  storage.py
src/utils/: __init__.py  ui.py
